--- a/packageManifest.json
+++ b/packageManifest.json
@@ -17,5 +17,5 @@
   "licenseFile": "https://raw.githubusercontent.com/tomwpublic/hubitat_midea/main/LICENSE",
   "releaseNotes": "0.9.0 - @tomw - Initial release.",
   "documentationLink": "https://github.com/tomwpublic/hubitat_midea/blob/main/README.md",
-  "communityLink": "TBD"
+  "communityLink": "https://community.hubitat.com/t/midea-mini-split-wifi-support/78838/11"
 }
