--- a/packageManifest.json
+++ b/packageManifest.json
@@ -15,7 +15,7 @@
     }
   ],
   "licenseFile": "https://raw.githubusercontent.com/tomwpublic/hubitat_midea/main/LICENSE",
-  "releaseNotes": "0.9.2 - tomw - Fix for data format of attributes: supportedThermostatFanModes and supportedThermostatModes (press Configure on device page to finalize update)\n0.9.1 - tomw - Add 'off' as a thermostatMode.  Some improvements to Fahrenheit setpoints (still in progress).\n0.9.0 - @tomw - Initial release.",
+  "releaseNotes": "0.9.2 - tomw - Fix for data format of attributes: supportedThermostatFanModes and supportedThermostatModes (press Configure on device page to finalize update)\n0.9.1 - tomw - Add 'off' as a thermostatMode.  Some improvements to Fahrenheit setpoints (still in progress).\n0.9.0 - tomw - Initial release.",
   "documentationLink": "https://github.com/tomwpublic/hubitat_midea/blob/main/README.md",
   "communityLink": "https://community.hubitat.com/t/midea-mini-split-wifi-support/78838/11"
 }
